--- a/questions/questions.tex
+++ b/questions/questions.tex
@@ -38,6 +38,35 @@
 
 %\subsection{}
 
+\section*{EB questions}
+\begin{description}[style=nextline]
+
+\item[Andrew - line 95 - From figure 2, I see that not all MuCS muons pass through the TPC. Can you confirm that this has no effect on the calculated efficiencies? I'd guess that the requirement of both a PMT and MuCS signal in the trigger ensures that we only count the muons that pass through both the MuCS and TPC. It might be worth adding a sentence about this somewhere in the internal note.]
+
+\item[A - line 133 - I'd insert a new section header 'Monte Carlo simulation' at this point. Am I right in saying that the MuCS system isn't explicitly included in the G4 simulation? You should probably say this in the internal note.]
+
+\item[A - line 147/148 - I'm confused about how you filter MC events (sorry!). Lines 147/48 imply that you discard Monte Carlo muons outside the angular acceptance of the MuCS. However, in order to calculate the quantity P (i.e. purity), I think you'd need to use a MC sample covering the full range of angles. Could you clarify? I have a similar question about lines 189/90. When you calculate P and A from the MC, do you require that the MC muons pass through the known locations of the MuCS panels? I think perhaps not, given the statement in 167/68 about an independent MC sample. It might help to add some extra text to the note about this.]
+
+\item[A - Figure 5 (around line 162) - Figure 5 looks nice! Could you label the upper and lower panels 'Top' and 'Bottom'? Also, you should probably write the labels 'Upstream', 'Center' and 'Downstream' onto the plots themselves (so that these plots will make sense when shown separately in talks). The axis labels 'x' and 'z' are also a bit too small on these plots.]
+
+\item[A - Figure 7 (around line 208) - Thanks very much for adding the data points to figure 7 (something I requested). I think the data look good. The fact that both the data and MC reconstruction efficiencies have a flat dependence on $d_{max}$ indicates that the quantity P/A (in particular the acceptance) is well-modelled by the MC, which is good. By the way, do you apply the same P/A correction to each of the different MuCS configurations?]
+
+\item[A - around line 208 - In a previous thread, Vassili suggested making a plot of the $d_{max}$ variable. I think a data/MC comparison of this variable might be a good plot for the internal note.]
+
+\item[A - around line 220 - I wonder if, at this point, you could quote the calculated values of $\epsilon_{MC}$ and $\epsilon_{data}$ in the text with their statistical errors (i.e. 96.1\% and 96.3\%)? (It might be nice to do this before the discussion of systematics). Could you also include a table showing the separate $\epsilon_{MC}$ and $\epsilon_{data}$ values for each of the three different MuCS configurations? I'm assuming there are three different values of $\epsilon_{MC}$, but I might be mistaken.]
+
+\item[A - Figure 8 (line 219) - The 3D (or 4D?) plots in figure 8 look cool - but I wonder if they're too hard to absorb? Also, only the outer edges of these plots can ever be visible. I think the 1D and 2D plots in figures 13 and 14 do a good job of getting the message across.]
+
+\item[A - line 221 - I'd insert a new section header 'Systematic Uncertainties' here.]
+
+\item[A - line 252 - You should quote the overall systematic error resulting from non-uniformities in the text at this point (it looks like the number is 1.1\%?).  This seems like it's probably an over-estimate, since: (1) detector uniformities are included in the simulation to some extent, (2) figure 9 doesn't suggest that the systematic error would be so large. Can you clarify in the text how you get to 1.1\% - I guess the best MuCS efficiency is 1.1\% higher than the average efficiency? I'm not suggesting that you change the method - just clarify in the text.]
+
+\item[A - around line 273 - Is there a possible extra systematic associated with the calculation of the purity P? This quantity probably depends on the angular distributions of cosmic-ray muons being well-simulated. However, it's hard to imagine this being a large effect!]
+
+\item[A - Figure 13 (around line 277) - Are the MC errors in these figures stats-only? You should clarify this in the caption of figure 13. Also, I might change the y-axis titles from 'Efficiency' to 'Track reconstruction efficiency' in these plots.]
+
+\item[A - line 281 - change 'efficiency is proportional to' to 'efficiency increases with'.]
+\end{description}
 
 
 \end{document}
