--- a/questions/questions.tex
+++ b/questions/questions.tex
@@ -33,7 +33,7 @@
     \caption{Extrapolated points of the MuCS-tagged tracks at the height of top and bottom panels for the upstream configuration before and after an angular cut of 5$^{\circ}$ on $\Delta_{\theta}$ and $\Delta_{\phi}$.} \label{fig:alignment}
   \end{figure}
   \item[Mike K - How do you reconcile 96.1\% reconstruction efficiency with the few percent efficiency quoted by Tim Bolton?]
-  Our efficiency and the one quoted by Tim cannot be compared directly. In our case, we know there must be a cosmic ray in a well-defined area of the detector, while Tim's 6\% refers to CC-inclusive events, whose topology is different and its position in the detector is unknown.
+  Our efficiency and the one quoted by Tim cannot be compared directly. In our case, every event has a MuCS cosmic ray and we measure the fraction of those events with a reconstructed track, while Tim's 6\% includes CC-inclusive event selection.
 \end{description}
 
 %\subsection{}
